<resources>
    <string name="app_name">Billiard-foglalo</string>
    <string name="formEmailHint">E-mail cím</string>
    <string name="formPasswordHint">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="email">E-mail cím</string>
    <string name="fullName">Teljes név</string>
    <string name="password">Jelszó</string>
    <string name="passwordAgain">Jelszó újra</string>
    <string name="phone">Telefonszám</string>
    <string name="registerRedirectText">Nincs fiókod? Regisztrálj</string>
    <string name="loginRedirectText">Már van fiókod? Bejelentkezés</string>
    <string name="iconDescription">TODO</string>
    <string name="book_a_date">Válassz egy dátumot a foglaláshoz</string>
    <string name="book">Foglalás</string>
    <string name="sign_in_as_guest">Bejelentkezés vendégként</string>
    <string name="login_as_guest">Bejelentkezés vendégként</string>

    <string-array name="game_types">
        <item>Pool</item>
        <item>Snooker</item>
    </string-array>

</resources>